--- a/index.html
+++ b/index.html
@@ -3,9 +3,158 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./assets/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./assets/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./assets/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./assets/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./assets/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./assets/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./assets/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./assets/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./assets/favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./assets/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="./assets/favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
+    <!--  reset-->
     <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- style -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
     <title>dự án 3</title>
   </head>
-  <body></body>
+  <body style="height: 100000px">
+    <header class="header">
+      <div class="main-content">
+        <!-- header-top -->
+        <div class="header-top">
+          <a href=""
+            ><img src="./assets/img/Logo.svg" alt="" class="header__top--img"
+          /></a>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="" class="nav__link--ative">Home</a>
+              </li>
+              <li class="nav__item">
+                <a href="">Services</a>
+              </li>
+              <li class="nav__item">
+                <a href="">About</a>
+              </li>
+              <li class="nav__item">
+                <a href="">Doctors</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="action">
+            <a href="" class="action__btn--login">Log In</a>
+            <a href="" class="btn action__btn--singup">Sign Up</a>
+          </div>
+        </div>
+        <!-- header-bottom -->
+        <section class="header-bottom">
+          <section class="header-bottom__left">
+            <h1 class="header-bottom__left--heading">
+              Exceptional dental care for all ages.
+            </h1>
+            <p class="header-bottom__left--desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+            <div class="header__book-call">
+              <div class="btn">Book Online</div>
+              <span class="book-call--tell">or call (123) 456-7890</span>
+            </div>
+          </section>
+          <div class="header-bottom__right">
+            <figure>
+              <img
+                src="./assets/img/headerbig.jpg"
+                alt=""
+                class="header-bottom__img--big"
+              />
+              <img
+                src="./assets/img/headersmall.jpg"
+                alt=""
+                class="header-bottom__img--small"
+              />
+            </figure>
+          </div>
+        </section>
+      </div>
+    </header>
+  </body>
 </html>
