--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
     <title>dự án 3</title>
   </head>
-  <body style="height: 100000px">
+  <body style="height: 1000000px">
+    <!-- ================header================ -->
     <header class="header">
       <div class="main-content">
         <!-- header-top -->
@@ -156,5 +157,182 @@
         </section>
       </div>
     </header>
+
+    <!-- ==================main=================== -->
+    <main class="main">
+      <section class="services">
+        <div class="main-content">
+          <!-- servicer-top -->
+          <section class="services-top">
+            <h2 class="heading-lv2 services-top__heading">Our services</h2>
+            <p class="services-top__desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+          </section>
+
+          <!-- services-bottom -->
+          <div class="services-bottom">
+            <!-- services-bottom-left -->
+            <figure>
+              <img
+                src="./assets/img/headerbig.jpg"
+                alt=""
+                class="services-bottom__img"
+              />
+            </figure>
+
+            <!-- services-bottom-right -->
+            <div class="services-bottom-right">
+              <!-- items 1 -->
+              <!-- item-left -->
+              <section class="services-item">
+                <div class="services-item__icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="22"
+                    height="24"
+                    viewBox="0 0 22 24"
+                    fill="none"
+                  >
+                    <path
+                      d="M20.3598 2.63964C17.9506 -0.556131 14.2772 -0.568132 11.2481 1.10682C11.001 1.24657 10.7219 1.31411 10.4406 1.30222C10.1592 1.29033 9.88633 1.19945 9.65105 1.03931C8.49552 0.245717 7.29036 -0.316477 5.13904 0.207462C0.623408 1.3071 0 4.90379 0 8.99816C0.0797353 12.1602 0.500857 15.3032 1.25551 18.3683C2.11836 22.0168 3.90382 24 5.43354 24C6.96326 24 7.00963 22.2204 7.00963 20.8016C7.00963 19.2009 7.39505 14.8009 10.8642 14.8009C13.5317 14.8009 14.3333 18.4013 14.3333 20.8016C14.3329 23.095 15.1722 24 16.6628 24C19.5267 24 20.9796 15.3938 21.3719 13.1237C21.7642 10.8535 22.9882 6.12569 20.3598 2.63964Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </div>
+                <!-- items-right -->
+                <div class="services-item__content">
+                  <div class="services-item__heading">Oral Surgery</div>
+                  <div class="services-item__desc">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </div>
+                </div>
+              </section>
+
+              <!-- items 2 -->
+              <!-- item-left -->
+              <section class="services-item">
+                <div class="services-item__icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="22"
+                    height="24"
+                    viewBox="0 0 22 24"
+                    fill="none"
+                  >
+                    <path
+                      d="M20.3598 2.63964C17.9506 -0.556131 14.2772 -0.568132 11.2481 1.10682C11.001 1.24657 10.7219 1.31411 10.4406 1.30222C10.1592 1.29033 9.88633 1.19945 9.65105 1.03931C8.49552 0.245717 7.29036 -0.316477 5.13904 0.207462C0.623408 1.3071 0 4.90379 0 8.99816C0.0797353 12.1602 0.500857 15.3032 1.25551 18.3683C2.11836 22.0168 3.90382 24 5.43354 24C6.96326 24 7.00963 22.2204 7.00963 20.8016C7.00963 19.2009 7.39505 14.8009 10.8642 14.8009C13.5317 14.8009 14.3333 18.4013 14.3333 20.8016C14.3329 23.095 15.1722 24 16.6628 24C19.5267 24 20.9796 15.3938 21.3719 13.1237C21.7642 10.8535 22.9882 6.12569 20.3598 2.63964Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </div>
+                <!-- items-right -->
+                <div class="services-item__content">
+                  <div class="services-item__heading">Wisdom Teeth Removal</div>
+                  <div class="services-item__desc">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </div>
+                </div>
+              </section>
+
+              <!-- items 3 -->
+              <!-- item-left -->
+              <section class="services-item">
+                <div class="services-item__icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="22"
+                    height="24"
+                    viewBox="0 0 22 24"
+                    fill="none"
+                  >
+                    <path
+                      d="M20.3598 2.63964C17.9506 -0.556131 14.2772 -0.568132 11.2481 1.10682C11.001 1.24657 10.7219 1.31411 10.4406 1.30222C10.1592 1.29033 9.88633 1.19945 9.65105 1.03931C8.49552 0.245717 7.29036 -0.316477 5.13904 0.207462C0.623408 1.3071 0 4.90379 0 8.99816C0.0797353 12.1602 0.500857 15.3032 1.25551 18.3683C2.11836 22.0168 3.90382 24 5.43354 24C6.96326 24 7.00963 22.2204 7.00963 20.8016C7.00963 19.2009 7.39505 14.8009 10.8642 14.8009C13.5317 14.8009 14.3333 18.4013 14.3333 20.8016C14.3329 23.095 15.1722 24 16.6628 24C19.5267 24 20.9796 15.3938 21.3719 13.1237C21.7642 10.8535 22.9882 6.12569 20.3598 2.63964Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </div>
+                <!-- items-right -->
+                <div class="services-item__content">
+                  <div class="services-item__heading">
+                    Preventative Dentistry
+                  </div>
+                  <div class="services-item__desc">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </div>
+                </div>
+              </section>
+
+              <!-- btn -->
+              <div class="btn services-btn">All Services</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===================Work================ -->
+      <section class="main-work">
+        <div class="main-content">
+          <section class="work-body">
+            <h2 class="heading-lv2 work-body__heading">How it works</h2>
+            <p class="word-body__desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+
+            <section class="work-list">
+              <!-- item 1 -->
+              <div class="work-item">
+                <img
+                  src="./assets/icon/workicon1.svg"
+                  alt=""
+                  class="work-item__icon"
+                />
+                <p class="work-item__heading">Search doctor</p>
+                <p class="work-item__desc">
+                  Search a doctor by education, qualifications or
+                  experience-contact for inquiry.
+                </p>
+                <a href="" class="work-item-link">Learn More</a>
+              </div>
+
+              <!-- item 2 -->
+              <div class="work-item">
+                <img
+                  src="./assets/icon/workicon2.svg"
+                  alt=""
+                  class="work-item__icon"
+                />
+                <p class="work-item__heading">Find best doctor</p>
+                <p class="work-item__desc">
+                  Search a doctor by education, qualifications or
+                  experience-contact for inquiry.
+                </p>
+                <a href="" class="work-item-link">Learn More</a>
+              </div>
+
+              <!-- item 3 -->
+              <div class="work-item">
+                <img
+                  src="./assets/icon/workicon3.svg"
+                  alt=""
+                  class="work-item__icon"
+                />
+                <p class="work-item__heading">Get treatment</p>
+                <p class="work-item__desc">
+                  Search a doctor by education, qualifications or
+                  experience-contact for inquiry.
+                </p>
+                <a href="" class="work-item-link">Learn More</a>
+              </div>
+            </section>
+          </section>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
