--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <title>dự án 3</title>
   </head>
-  <body style="height: 1000000px">
+  <body>
     <!-- ================header================ -->
     <header class="header">
       <div class="main-content">
@@ -333,6 +333,448 @@
           </section>
         </div>
       </section>
+
+      <!-- ====================about================== -->
+      <section class="main-about">
+        <div class="main-content">
+          <div class="about-body">
+            <!-- about-left -->
+            <figure class="about-left">
+              <img
+                src="./assets/img/aboutbig.jpg"
+                alt=""
+                class="about-left__img--big"
+              />
+              <img
+                src="./assets/img/aboutsmall.jpg"
+                alt=""
+                class="about-left__img--small"
+              />
+            </figure>
+
+            <!-- about-right-->
+            <section class="about-right">
+              <h2 class="heading-lv2 about-right__heading">
+                Take back your smile with shine.
+              </h2>
+              <p class="about-right__desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <a href="" class="btn about-bnt">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <!-- ====================team=================== -->
+      <section class="main-team">
+        <div class="main-content">
+          <div class="team-body">
+            <div class="team-header">
+              <h2 class="heading-lv2">Our virtual dentist</h2>
+              <a href="" class="btn team-btn">Meet our dentist</a>
+            </div>
+
+            <!-- team-list -->
+            <div class="team-list">
+              <!-- item 1 -->
+              <article class="team-item">
+                <div class="team-img__bg">
+                  <img
+                    src="./assets/img/doctor1.png"
+                    alt=""
+                    class="team-item__img"
+                  />
+                </div>
+                <p class="team-item__name">Dr. Essence Page</p>
+                <p class="team-item__desc">
+                  DDS, California - Linda University
+                </p>
+              </article>
+
+              <!-- item 2 -->
+              <article class="team-item">
+                <div class="team-img__bg">
+                  <img
+                    src="./assets/img/doctor2.png"
+                    alt=""
+                    class="team-item__img"
+                  />
+                </div>
+                <p class="team-item__name">Dr. Essence Page</p>
+                <p class="team-item__desc">
+                  DDS, California - Linda University
+                </p>
+              </article>
+
+              <!-- item 3 -->
+              <article class="team-item">
+                <div class="team-img__bg">
+                  <img
+                    src="./assets/img/doctor3.png"
+                    alt=""
+                    class="team-item__img"
+                  />
+                </div>
+                <p class="team-item__name">Dr. Essence Page</p>
+                <p class="team-item__desc">
+                  DDS, California - Linda University
+                </p>
+              </article>
+
+              <!-- item 4 -->
+              <article class="team-item">
+                <div class="team-img__bg">
+                  <img
+                    src="./assets/img/doctor4.png"
+                    alt=""
+                    class="team-item__img"
+                  />
+                </div>
+                <p class="team-item__name">Dr. Essence Page</p>
+                <p class="team-item__desc">
+                  DDS, California - Linda University
+                </p>
+              </article>
+            </div>
+
+            <!-- team-control -->
+            <div class="control team-buttom-control">
+              <button class="control-btn">
+                <svg
+                  class="team-buttom-control__previer"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="6"
+                  height="12"
+                  viewBox="0 0 6 12"
+                  fill="none"
+                >
+                  <path
+                    d="M5.5 1L0.5 6L5.5 11"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+
+              <!-- next -->
+              <button class="control-btn">
+                <svg
+                  class="team-buttom-control__previer team-control__rotate"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="6"
+                  height="12"
+                  viewBox="0 0 6 12"
+                  fill="none"
+                >
+                  <path
+                    d="M5.5 1L0.5 6L5.5 11"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===================dentures============= -->
+      <section class="main-dentures">
+        <div class="main-content">
+          <section class="dentures-body">
+            <figure>
+              <img
+                src="./assets/img/renturens.png"
+                alt=""
+                class="dentures-img"
+              />
+            </figure>
+            <section class="dentures-content">
+              <h2 class="heading-lv2 dentures__heading">
+                Take back your smile with dentures
+              </h2>
+              <p class="dentures__desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <div class="dentures-list__icon">
+                <a href=""
+                  ><img
+                    src="./assets/icon/GooglePlay.svg"
+                    alt="google play"
+                    class="dentures__icon"
+                /></a>
+                <a href=""
+                  ><img
+                    src="./assets/icon/AppStore.svg"
+                    alt="app stor"
+                    class="dentures__icon"
+                /></a>
+              </div>
+            </section>
+          </section>
+        </div>
+      </section>
+
+      <!-- ==================blog================== -->
+      <section class="main-blog">
+        <div class="main-content">
+          <div class="blog-body">
+            <!-- blog-left -->
+            <section class="blog-left">
+              <h2 class="heading-lv2 blog-heading">
+                Read Latest News & Events.
+              </h2>
+              <a href="" class="blog-item__all">Read All Blog</a>
+              <!-- control -->
+              <div class="control blog-control">
+                <button class="control-btn">
+                  <svg
+                    class="team-buttom-control__previer"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="6"
+                    height="12"
+                    viewBox="0 0 6 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M5.5 1L0.5 6L5.5 11"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+
+                <!-- next -->
+                <button class="control-btn">
+                  <svg
+                    class="team-buttom-control__previer team-control__rotate"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="6"
+                    height="12"
+                    viewBox="0 0 6 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M5.5 1L0.5 6L5.5 11"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </section>
+
+            <!-- blog-right -->
+            <div class="blog-right">
+              <!-- item 1 -->
+              <article class="blog-item">
+                <figure>
+                  <img
+                    src="./assets/img/blog1.jpg"
+                    alt=""
+                    class="blog-item__img"
+                  />
+                </figure>
+                <section class="blog-item__content">
+                  <h3 class="blog-item__heading">
+                    Key Considerations for Regulatory Compliant.
+                  </h3>
+                  <p class="blog-item__desc">
+                    It’s easy to think about medical care from a narrow
+                    perspective. You go to the hospital.
+                  </p>
+                  <a href="" class="blog-item__link">Learn More</a>
+                </section>
+              </article>
+
+              <!-- item 2 -->
+              <article class="blog-item">
+                <figure>
+                  <img
+                    src="./assets/img/blog2.jpg"
+                    alt=""
+                    class="blog-item__img"
+                  />
+                </figure>
+                <section class="blog-item__content">
+                  <h3 class="blog-item__heading">
+                    Key Considerations for Regulatory Compliant.
+                  </h3>
+                  <p class="blog-item__desc">
+                    It’s easy to think about medical care from a narrow
+                    perspective. You go to the hospital.
+                  </p>
+                  <a href="" class="blog-item__link">Learn More</a>
+                </section>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- =================appointment============ -->
+      <section class="main-appointment">
+        <div class="main-content">
+          <div class="appointment-body">
+            <h2 class="heading-lv2 appointment__heading">
+              Always welcoming new patients
+            </h2>
+            <p class="appointment__desc">
+              Take control of your dental health and get the personalized care
+              you deserve. Call (541) 772-8846 to schedule
+            </p>
+            <a href="" class="btn appointment__btn">Appointment</a>
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- ==================footer================= -->
+    <footer class="footer">
+      <div class="main-content">
+        <div class="footer-body">
+          <!-- footer-top -->
+          <div class="footer-top">
+            <!-- item 1 -->
+            <div class="footer-item">
+              <a href="" class="footer__logo">
+                <img src="./assets/img/Logo.svg" alt=""
+              /></a>
+              <p class="footer__desc">
+                Exceptional dental care for all ages. Your great smile begins
+                with a great dentist.
+              </p>
+            </div>
+
+            <!-- item 2 -->
+            <div class="footer-item">
+              <ul>
+                <li>
+                  <h3 class="footer-heading">Support</h3>
+                </li>
+                <li>
+                  <a href="">Help center</a>
+                </li>
+                <li>
+                  <a href="">Account information</a>
+                </li>
+                <li>
+                  <a href="">About</a>
+                </li>
+                <li>
+                  <a href="">Contact us</a>
+                </li>
+                <li>
+                  <h3 class="footer-heading">Support</h3>
+                </li>
+                <li>
+                  <a href="">Help center</a>
+                </li>
+                <li>
+                  <a href="">Account information</a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- item 3 -->
+            <div class="footer-item">
+              <ul>
+                <li>
+                  <h3 class="footer-heading">Support</h3>
+                </li>
+                <li>
+                  <a href="">Help center</a>
+                </li>
+                <li>
+                  <a href="" class="footer__icon3">Account information</a>
+                </li>
+                <li>
+                  <h3 class="footer-heading">Support</h3>
+                </li>
+                <li>
+                  <a href="">Help center</a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- item 4 -->
+            <div class="footer-item">
+              <h3 class="footer-heading">Stay In Touch</h3>
+
+              <div class="footer-list__icon">
+                <a href="" class="footer__icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="6"
+                    height="12"
+                    viewBox="0 0 6 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M3.98981 11.9358V6.0302H5.76473L6 3.9517H3.98981L3.9928 2.91132C3.9928 2.3692 4.0477 2.07885 4.87783 2.07885H5.98755V0H4.21224C2.07977 0 1.32931 1.00825 1.32931 2.70405V3.95186H0V6.03055H1.32931V11.8521C1.84718 11.9489 2.38257 12 2.93075 12C3.28487 12 3.63863 11.9786 3.98981 11.9358Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </a>
+                <a href="" class="footer__icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="12"
+                    viewBox="0 0 16 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M16 1.42062C15.405 1.66154 14.771 1.82123 14.11 1.89877C14.79 1.524 15.309 0.935077 15.553 0.225231C14.919 0.574154 14.219 0.820615 13.473 0.958154C12.871 0.366462 12.013 0 11.077 0C9.261 0 7.799 1.36062 7.799 3.02862C7.799 3.26862 7.821 3.49938 7.875 3.71908C5.148 3.59631 2.735 2.38985 1.114 0.552C0.831 1.00523 0.665 1.524 0.665 2.08246C0.665 3.13108 1.25 4.06062 2.122 4.59877C1.595 4.58954 1.078 4.44831 0.64 4.22585C0.64 4.23508 0.64 4.24708 0.64 4.25908C0.64 5.73046 1.777 6.95262 3.268 7.23415C3.001 7.30154 2.71 7.33385 2.408 7.33385C2.198 7.33385 1.986 7.32277 1.787 7.28215C2.212 8.48123 3.418 9.36277 4.852 9.39138C3.736 10.1972 2.319 10.6828 0.785 10.6828C0.516 10.6828 0.258 10.6717 0 10.6412C1.453 11.5062 3.175 12 5.032 12C11.068 12 14.368 7.38462 14.368 3.384C14.368 3.25015 14.363 3.12092 14.356 2.99262C15.007 2.56615 15.554 2.03354 16 1.42062Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </a>
+                <a href="" class="footer__icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="13"
+                    height="12"
+                    viewBox="0 0 13 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M0 1.39394C0 0.989891 0.146401 0.656558 0.439189 0.393939C0.731978 0.131309 1.11262 0 1.58108 0C2.04119 0 2.41344 0.129285 2.69788 0.387879C2.99066 0.654545 3.13707 1.00201 3.13707 1.4303C3.13707 1.81818 2.99486 2.14141 2.71042 2.4C2.41764 2.66667 2.03282 2.8 1.55598 2.8H1.54344C1.08333 2.8 0.711072 2.66667 0.426641 2.4C0.142209 2.13333 0 1.79798 0 1.39394ZM0.163127 12V3.90303H2.94884V12H0.163127ZM4.49228 12H7.27799V7.47879C7.27799 7.19595 7.31146 6.97777 7.37838 6.82424C7.49549 6.54949 7.67326 6.31716 7.91168 6.12727C8.1501 5.93737 8.44916 5.84242 8.80888 5.84242C9.74582 5.84242 10.2143 6.45252 10.2143 7.67273V12H13V7.35758C13 6.16161 12.7072 5.25455 12.1216 4.63636C11.536 4.01818 10.7622 3.70909 9.80019 3.70909C8.72104 3.70909 7.88031 4.15758 7.27799 5.05455V5.07879H7.26544L7.27799 5.05455V3.90303H4.49228C4.509 4.16161 4.51737 4.96565 4.51737 6.31515C4.51737 7.66464 4.509 9.55959 4.49228 12Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </a>
+              </div>
+              <h3 class="footer-heading">Subscribe</h3>
+              <p class="footer__desc footer__item4">
+                Subscribe our newsletter for the latest update of Dental care
+              </p>
+
+              <form class="footer-form" action="">
+                <input
+                  type="email"
+                  placeholder="Enter your email..."
+                  class="footer-input__email"
+                />
+                <button type="button" class="footer-supmit">Subscribe</button>
+              </form>
+            </div>
+          </div>
+
+          <!-- footer-button -->
+          <div class="footer-button">
+            <p class="footer-button__desc">
+              2021 GDN. Copyright and All rights reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
