--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               a great dentist.
             </p>
             <div class="header__book-call">
-              <div class="btn">Book Online</div>
+              <a href="" class="btn">Book Online</a>
               <span class="book-call--tell">or call (123) 456-7890</span>
             </div>
           </section>
@@ -268,7 +268,7 @@
               </section>
 
               <!-- btn -->
-              <div class="btn services-btn">All Services</div>
+              <a href="" class="btn services-btn">All Services</a>
             </div>
           </div>
         </div>
