--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <!-- style -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- responsive -->
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
 
     <title>dự án 3</title>
   </head>
@@ -104,7 +106,7 @@
             ><img src="./assets/img/Logo.svg" alt="" class="header__top--img"
           /></a>
           <nav class="nav">
-            <ul class="nav__list">
+            <ul class="nav__list" id="nav-list__pc">
               <li class="nav__item">
                 <a href="" class="nav__link--ative">Home</a>
               </li>
@@ -125,8 +127,9 @@
             <a href="" class="btn action__btn--singup">Sign Up</a>
           </div>
         </div>
+
         <!-- header-bottom -->
-        <section class="header-bottom">
+        <section class="header-bottom" id="header__button--pc">
           <section class="header-bottom__left">
             <h1 class="header-bottom__left--heading">
               Exceptional dental care for all ages.
@@ -157,6 +160,66 @@
         </section>
       </div>
     </header>
+
+    <!--============== menu-responsive ================ -->
+    <!-- ======header======= -->
+    <div class="menu__mobile--resposive">
+      <input type="checkbox" name="checkbox" id="checkbox-mobile" hidden />
+      <!-- biểu tượng menu -->
+      <label for="checkbox-mobile">
+        <svg
+          class="menu-header__icon"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <path
+            fill="CurrentColor"
+            d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
+          />
+        </svg>
+      </label>
+
+      <!-- lớp đổ bóng toàn màn hình khi click vào thanh menu ở chế độ tablets và phone -->
+      <label class="menu-overlay" for="checkbox-mobile"></label>
+
+      <!-- tạo phần menu. khi người dùng click vào biểu tượng thì thanh menu trong phần mobile và phone hiện ra -->
+      <div class="menu-content__mobile">
+        <!-- ====menu-content__mobile--top====== -->
+        <div class="menu-content__mobile--top">
+          <!-- logo -->
+          <a href=""
+            ><img
+              src="./assets/img/Logo.svg"
+              alt=""
+              class="menu-content__mobile-img"
+          /></a>
+          <!-- close-menu -->
+          <label for="checkbox-mobile">
+            <svg
+              class="menu-content__mobile-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <path
+                fill="currentColor"
+                d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c-9.4 9.4-9.4 24.6 0 33.9l47 47-47 47c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l47-47 47 47c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-47-47 47-47c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-47 47-47-47c-9.4-9.4-24.6-9.4-33.9 0z"
+              />
+            </svg>
+          </label>
+        </div>
+
+        <!-- nav  dùng js để copy code ở phần header-->
+        <ul id="nav-list__mobile"></ul>
+        <script>
+          const navPC = document.querySelector("#nav-list__pc");
+          const navMB = document.querySelector("#nav-list__mobile");
+          // gán biến
+          navMB.innerHTML = navPC.innerHTML;
+        </script>
+      </div>
+
+      <!-- ====menu-content__mobile--button===== -->
+    </div>
 
     <!-- ==================main=================== -->
     <main class="main">
