--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
           <!-- footer-top -->
           <div class="footer-top">
             <!-- item 1 -->
-            <div class="footer-item">
+            <div class="footer-item footer-hidden__tablet">
               <a href="" class="footer__logo">
                 <img src="./assets/img/Logo.svg" alt=""
               /></a>
