--- a/index.html
+++ b/index.html
@@ -216,9 +216,19 @@
           // gán biến
           navMB.innerHTML = navPC.innerHTML;
         </script>
-      </div>
+        <!-- vạch ngăn cách giữ menu và các nút sig in, sig up -->
+        <div class="horizontal-line"></div>
 
-      <!-- ====menu-content__mobile--button===== -->
+        <!-- 2 nút sing in, sing up -->
+        <div class="show-on__mobile">
+          <li class="nav__item">
+            <a href="">Log In</a>
+          </li>
+          <li class="nav__item">
+            <a href="">Sing Up</a>
+          </li>
+        </div>
+      </div>
     </div>
 
     <!-- ==================main=================== -->
